--- a/CV.ipynb
+++ b/CV.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
     "_, thresh_image = cv2.threshold(gray_image, 150, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "# optional step, just to check how image becomes\n",
-    "cv2.imwrite(\"preprocessed_image.png\", thresh_image)\n",
+    "cv2.imwrite(\"text_detection.png\", thresh_image)\n",
     "\n",
     "# pytesseract only works with RGB image so let's convert\n",
     "pil_image = Image.fromarray(cv2.cvtColor(thresh_image, cv2.COLOR_GRAY2RGB))\n",
@@ -157,7 +157,212 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "let's preprocess the image, now to detect the table, lines and ...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "image_path = \"image.png\"\n",
+    "image = cv2.imread(image_path)\n",
+    "\n",
+    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "thresh = cv2.adaptiveThreshold(gray, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, \n",
+    "                               cv2.THRESH_BINARY_INV, 11, 2)\n",
+    "\n",
+    "# just for checking image \n",
+    "cv2.imwrite(\"lines_detection.png\", thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "detecting lines in table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges = cv2.Canny(thresh, 30, 150, apertureSize=3)\n",
+    "\n",
+    "# Detect lines using Hough Transform\n",
+    "lines = cv2.HoughLinesP(edges, 1, np.pi / 180, threshold=100, \n",
+    "                        minLineLength=100, maxLineGap=10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(lines)\n",
+    "image_with_lines = image.copy()\n",
+    "\n",
+    "for line in lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "    cv2.line(image_with_lines, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv2.imwrite(\"lines_detected.png\",image_with_lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now that lines are detected, we need to separate vertical and horizotal lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   1  164 1979  164]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lines[0])\n",
+    "# a bit confused which line's cordinate are these"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected 144 horizontal lines and 11 vertical lines\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we have values in lines\n",
+    "\n",
+    "horizontal_lines = []\n",
+    "vertical_lines = []\n",
+    "\n",
+    "for line in lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "\n",
+    "    # Horizontal lines have a small y-difference (close to 0 slope)\n",
+    "    if abs(y2 - y1) < 10:  # Threshold for horizontal\n",
+    "        horizontal_lines.append([x1, y1, x2, y2])\n",
+    "\n",
+    "    # Vertical lines have a small x-difference (close to infinite slope)\n",
+    "    elif abs(x2 - x1) < 10:  # Threshold for vertical\n",
+    "        vertical_lines.append([x1, y1, x2, y2])\n",
+    "\n",
+    "    # Sort lines\n",
+    "horizontal_lines = sorted(horizontal_lines, key=lambda x: x[1])  # Sort by y-coordinate\n",
+    "vertical_lines = sorted(vertical_lines, key=lambda x: x[0])  # Sort by x-coordinate\n",
+    "\n",
+    "print(f\"Detected {len(horizontal_lines)} horizontal lines and {len(vertical_lines)} vertical lines\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int32(2), np.int32(0), np.int32(1980), np.int32(0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(horizontal_lines[0])\n",
+    "# (2,0) (1980,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract cell bounding boxes\n",
+    "cells = []\n",
+    "for i in range(len(horizontal_lines) - 1):  # Iterate over rows\n",
+    "    for j in range(len(vertical_lines) - 1):  # Iterate over columns\n",
+    "        x1 = vertical_lines[j][0]  # Left x-coordinate\n",
+    "        y1 = horizontal_lines[i][1]  # Top y-coordinate\n",
+    "        x2 = vertical_lines[j + 1][0]  # Right x-coordinate\n",
+    "        y2 = horizontal_lines[i + 1][1]  # Bottom y-coordinate\n",
+    "        cells.append((x1, y1, x2, y2))\n",
+    "\n",
+    "# Draw the cells on the image for visualization\n",
+    "image_with_cells = image.copy()\n",
+    "for (x1, y1, x2, y2) in cells:\n",
+    "    cv2.rectangle(image_with_cells, (x1, y1), (x2, y2), (0, 0, 255), 2)\n",
+    "\n",
+    "# Save the image with cells\n",
+    "cv2.imwrite(\"cells_detected.png\", image_with_cells)"
+   ]
   },
   {
    "cell_type": "code",
