cell text not read properly

--- a/CV.ipynb
+++ b/CV.ipynb
@@ -76,22 +76,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NO. Item No Description Hscode P/O# S/O# Q'ty(Pcs) Unit Price(USD) Amount(USD)\n",
-      "2 104-10001 NeoNatalie Basic (dark) 902300 | TN200259 | S0125175 20 124.00 2480.00\n",
-      "10 340-00333 MamaNatalie Compl Light 902300 | TN200259 | S0125175 10 450.00 4500.00\n",
-      "1 340-00533 MamaN Compl (LT) Mama-U 902300 | TN200259 | S0125175 1 705.60 705.60\n",
-      "i 340-11033 NeoNatalie Spare Dk 902300 | TN200259 | S0125175 15 51.00 765.00\n",
-      "1 340-11133 NeoNatalie Spare Lt 902300 | TN200259 | S0125175 3 51.00 153.00\n",
-      "i 340-12033 NeoNatalie body (Qt2) Dk 902300 | TN200259 | S0125175 36.60 36.60\n",
-      "38 360-00133 MamaBirthie (light) 902300 | TN200259 | S0125175 38 586.00 22268.00\n",
-      "8 450-00033 LM Mama-U 902300 | TN200259 | S0125175 36 153.00 5508.00\n",
+      "NO Item No Description Hscode P/O# S/O# Q'ty(Pcs) Unit Price(USD) Amount(USD)\n",
+      "2\n",
+      "\n",
+      "104-10001 NeoNatalie Basic (dark) 902300 TN200259 | SO125175 20 124.00 2480.00\n",
+      "io 340-00333 MamaNatalie Compl Light 902300 TN200259 | SO0125175 10 450.00 4500.00\n",
+      "1 340-00533 MamaN Compl (LT) Mama-U 902300 TN200259 | SO125175 a 705.60 705.60\n",
+      "1 340-11033 NeoNatalie Spare Dk 902300 TN200259 | SO0125175 a5 51.00 765.00\n",
+      "1 340-11133 NeoNatalie Spare Lt 902300 TN200259 | SO125175 3 51.00 153.00\n",
+      "1 340-12033 NeoNatalie body (Qt2) Dk 902300 TN200259 | SO0125175 1 36.60 36.60\n",
+      "38 360-00133 MamaBirthie (light) 902300 TN200259 | SO125175 38 586.00 22268.00\n",
+      "8 450-00033 LM Mama-U 902300 TN200259 | SO0125175 36 153.00 5508.00\n",
       "\n",
       "\n"
      ]
@@ -110,7 +112,11 @@
     "gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "# threshold is applied to make the important portion of the image to be prioritized\n",
-    "_, thresh_image = cv2.threshold(gray_image, 150, 255, cv2.THRESH_BINARY)\n",
+    "# _, thresh_image = cv2.threshold(gray_image, 150, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "thresh_image = cv2.adaptiveThreshold(gray_image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, \n",
+    "                                     cv2.THRESH_BINARY, 11, 2)\n",
+    "                                     \n",
     "\n",
     "# optional step, just to check how image becomes\n",
     "cv2.imwrite(\"text_detection.png\", thresh_image)\n",
@@ -132,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +178,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +193,10 @@
     "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "thresh = cv2.adaptiveThreshold(gray, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C, \n",
-    "                               cv2.THRESH_BINARY_INV, 11, 2)\n",
+    "                               cv2.THRESH_BINARY_INV, 15, 2)\n",
+    "\n",
+    "horizontal_kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (30, 1))  # (Width, Height)\n",
+    "thresh_image = cv2.morphologyEx(thresh_image, cv2.MORPH_OPEN, horizontal_kernel, iterations=2)\n",
     "\n",
     "# just for checking image \n",
     "cv2.imwrite(\"lines_detection.png\", thresh)"
@@ -202,35 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edges = cv2.Canny(thresh, 30, 150, apertureSize=3)\n",
-    "\n",
-    "# Detect lines using Hough Transform\n",
-    "lines = cv2.HoughLinesP(edges, 1, np.pi / 180, threshold=100, \n",
-    "                        minLineLength=100, maxLineGap=10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(lines)\n",
-    "image_with_lines = image.copy()\n",
-    "\n",
-    "for line in lines:\n",
-    "    x1, y1, x2, y2 = line[0]\n",
-    "    cv2.line(image_with_lines, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -239,13 +220,66 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "edges = cv2.Canny(thresh, 50, 150, apertureSize=3)\n",
+    "\n",
+    "# Detect lines using Hough Transform\n",
+    "# lines = cv2.HoughLinesP(edges, 1, np.pi / 180, threshold=20, \n",
+    "#                         minLineLength=265, maxLineGap=10)\n",
+    "\n",
+    "\n",
+    "lines = cv2.HoughLinesP(edges, 1, np.pi / 180, threshold=155, \n",
+    "                        minLineLength=261, maxLineGap=14)\n",
+    "\n",
+    "# print(lines)\n",
+    "image_with_lines = image.copy()\n",
+    "\n",
+    "for line in lines:\n",
+    "    x1, y1, x2, y2 = line[0]\n",
+    "    cv2.line(image_with_lines, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "    \n",
+    "\n",
     "cv2.imwrite(\"lines_detected.png\",image_with_lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # print(lines)\n",
+    "# image_with_lines = image.copy()\n",
+    "\n",
+    "# for line in lines:\n",
+    "#     x1, y1, x2, y2 = line[0]\n",
+    "#     cv2.line(image_with_lines, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cv2.imwrite(\"lines_detected.png\",image_with_lines)"
    ]
   },
   {
@@ -257,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -275,33 +309,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected 144 horizontal lines and 11 vertical lines\n"
+      "Detected 21 horizontal lines and 12 vertical lines\n"
      ]
     }
    ],
    "source": [
     "# we have values in lines\n",
     "\n",
+    "# horizontal_lines = []\n",
+    "# vertical_lines = []\n",
+    "\n",
+    "# for line in lines:\n",
+    "#     x1, y1, x2, y2 = line[0]\n",
+    "\n",
+    "#     # Horizontal lines have a small y-difference (close to 0 slope)\n",
+    "#     if abs(y2 - y1) < 10:  # Threshold for horizontal\n",
+    "#         horizontal_lines.append([x1, y1, x2, y2])\n",
+    "\n",
+    "#     # Vertical lines have a small x-difference (close to infinite slope)\n",
+    "#     elif abs(x2 - x1) < 10:  # Threshold for vertical\n",
+    "#         vertical_lines.append([x1, y1, x2, y2])\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
     "horizontal_lines = []\n",
     "vertical_lines = []\n",
+    "\n",
+    "line_threshold = 10  # Distance threshold for merging lines\n",
+    "min_line_length = 50  # Filter out very short lines\n",
     "\n",
     "for line in lines:\n",
     "    x1, y1, x2, y2 = line[0]\n",
     "\n",
-    "    # Horizontal lines have a small y-difference (close to 0 slope)\n",
-    "    if abs(y2 - y1) < 10:  # Threshold for horizontal\n",
-    "        horizontal_lines.append([x1, y1, x2, y2])\n",
+    "    # Horizontal lines detection\n",
+    "    if abs(y2 - y1) < 10:  # Close to 0 slope\n",
+    "        if abs(x2 - x1) > min_line_length:  # Ignore small lines\n",
+    "            horizontal_lines.append([x1, y1, x2, y2])\n",
     "\n",
-    "    # Vertical lines have a small x-difference (close to infinite slope)\n",
-    "    elif abs(x2 - x1) < 10:  # Threshold for vertical\n",
-    "        vertical_lines.append([x1, y1, x2, y2])\n",
+    "    # Vertical lines detection\n",
+    "    elif abs(x2 - x1) < 10:  # Close to infinite slope\n",
+    "        if abs(y2 - y1) > min_line_length:  # Ignore small lines\n",
+    "            vertical_lines.append([x1, y1, x2, y2])\n",
     "\n",
     "    # Sort lines\n",
     "horizontal_lines = sorted(horizontal_lines, key=lambda x: x[1])  # Sort by y-coordinate\n",
@@ -312,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -339,13 +394,13 @@
        "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract cell bounding boxes\n",
+    "\n",
     "cells = []\n",
     "for i in range(len(horizontal_lines) - 1):  # Iterate over rows\n",
     "    for j in range(len(vertical_lines) - 1):  # Iterate over columns\n",
@@ -360,8 +415,59 @@
     "for (x1, y1, x2, y2) in cells:\n",
     "    cv2.rectangle(image_with_cells, (x1, y1), (x2, y2), (0, 0, 255), 2)\n",
     "\n",
-    "# Save the image with cells\n",
+    "\n",
     "cv2.imwrite(\"cells_detected.png\", image_with_cells)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we detected the text in the very beginning, but then why are we doing these steps again??\n",
+    "well, that was a random text block, but we need the the text along with the cell information\n",
+    ",,, in which cell the data is so that we can form the json format according to that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_text = []\n",
+    "for idx, (x1, y1, x2, y2) in enumerate(cells):\n",
+    "    # Crop the cell from the original image\n",
+    "    cell_image = image[y1:y2, x1:x2]\n",
+    "    \n",
+    "    # Convert to RGB for PIL (pytesseract requires RGB)\n",
+    "    cell_image_rgb = cv2.cvtColor(cell_image, cv2.COLOR_BGR2RGB)\n",
+    "    pil_image = Image.fromarray(cell_image_rgb)\n",
+    "    \n",
+    "    # Extract text using pytesseract\n",
+    "    text = pytesseract.image_to_string(pil_image).strip()\n",
+    "    \n",
+    "    # Store the text and coordinates\n",
+    "    cell_text.append({\"text\": text, \"coords\": (x1, y1, x2, y2)})\n",
+    "    # print(f\"Cell {idx + 1} Text: '{text}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "\n",
+    "# with open(\"cell_text.json\", \"w\") as f:\n",
+    "#     json.dump(cell_text, f)"
    ]
   },
   {
