data not read properly

--- a/CV.ipynb
+++ b/CV.ipynb
@@ -459,15 +459,182 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# i will see later from here"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import json\n",
     "\n",
     "# with open(\"cell_text.json\", \"w\") as f:\n",
-    "#     json.dump(cell_text, f)"
+    "#     json.dump(cell_text, f)\n",
+    "\n",
+    "import json\n",
+    "import numpy as np\n",
+    "\n",
+    "def default_converter(o):\n",
+    "    if isinstance(o, np.integer):\n",
+    "        return int(o)\n",
+    "    raise TypeError(f\"Object {o} is not JSON serializable\")\n",
+    "\n",
+    "with open(\"cell_text.json\", \"w\") as f:\n",
+    "    json.dump(cell_text, f, default=default_converter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed Headers: ['unknown', 'no', 'item_no', 'description', 'hscode', 'p_o', 's_o', 'unknown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assume cell_text is already populated from the previous step\n",
+    "headers_raw = [cell[\"text\"] for cell in cell_text[:8]]  # First row (8 cells)\n",
+    "\n",
+    "# Process each header: lowercase, underscore-separated, remove non-alphabet\n",
+    "import re\n",
+    "headers = []\n",
+    "for header in headers_raw:\n",
+    "    # Convert to lowercase and replace non-alphabet with underscore\n",
+    "    processed = re.sub(r'[^a-z0-9]+', '_', header.lower()).strip('_')\n",
+    "    headers.append(processed if processed else \"unknown\")  # Avoid empty strings\n",
+    "\n",
+    "print(\"Processed Headers:\", headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows detected: 27\n",
+      "Row 1: [\"O'ty(Pcs)\", 'Unit Price(USD)', 'Amount(USD)', '', '', '', '', '']\n",
+      "Row 2: ['', '', '', '', '', '', '', '']\n",
+      "Row 3: ['104-10001', 'NeoNatalie Basic (dark)', '902300', 'TN200259', '$0125175', '', '20', '124.00']\n",
+      "Row 4: ['2480.00', '', '10', '340-00333', 'MamaNatalie Comp! Light', '902300', 'TN200259', '$0125175']\n",
+      "Row 5: ['', '10', '450.00', '4500.00', '', '', '', '']\n",
+      "Row 6: ['', '', '', '', '', '', '', '']\n",
+      "Row 7: ['', '', '', '', '', '', '', '']\n",
+      "Row 8: ['', '', '', '', '', '', '', '']\n",
+      "Row 9: ['', '', '', '', '', '', '', '']\n",
+      "Row 10: ['', '', '', '', '', '', '', '']\n",
+      "Row 11: ['', '', '', '', '', '', '', '']\n",
+      "Row 12: ['', '', '', '', '', '', '', '']\n",
+      "Row 13: ['', '', '', '', '', '', '', '']\n",
+      "Row 14: ['', '', '', '', '', '', '', '']\n",
+      "Row 15: ['', '', '', '', '', '', '', '']\n",
+      "Row 16: ['', '', '', '', '', '', '', '']\n",
+      "Row 17: ['', '', '', '', '', '', '', '']\n",
+      "Row 18: ['', '', '', '', '', '', '', '']\n",
+      "Row 19: ['', '', '', '', '', '', '', '']\n",
+      "Row 20: ['', '', '', '', '', '', '', '340-11033']\n",
+      "Row 21: ['NeoNatalie Spare Dk', '902300', 'TN200259', '$0125175', '', '', '', '765.00']\n",
+      "Row 22: ['', '', '340-11133', 'NeoNatalie Spare Lt', '902300', 'TN200259', '$0125175', '']\n",
+      "Row 23: ['', '', '153.00', '', '', '340-12033', 'NeoNatalie body (Qt2) Dk', '902300']\n",
+      "Row 24: ['TN200259', '$0125175', '', '', '', '36.60', '', '38']\n",
+      "Row 25: ['360-00133', 'MamaBirthie (light)', '902300', 'TN200259', '$0125175', '', '38', '586.00']\n",
+      "Row 26: ['22268.00', '', '', '450-00033', 'LM Mama-U', '902300', 'TN200259', '$0125175']\n",
+      "Row 27: ['', '', '153.00', '5508.00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Total cells and number of data rows\n",
+    "total_cells = len(cell_text)\n",
+    "data_cells = cell_text[8:]  # Exclude header row\n",
+    "rows = [data_cells[i:i + 8] for i in range(0, len(data_cells), 8)]\n",
+    "\n",
+    "print(f\"Total rows detected: {len(rows)}\")\n",
+    "for idx, row in enumerate(rows):\n",
+    "    print(f\"Row {idx + 1}: {[cell['text'] for cell in row]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSON Data: [{'unknown': '', 'no': 'Unit Price(USD)', 'item_no': 'Amount(USD)', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '124.00', 'no': 'NeoNatalie Basic (dark)', 'item_no': '902300', 'description': 'TN200259', 'hscode': '$0125175', 'p_o': '', 's_o': '20'}, {'unknown': '$0125175', 'no': '', 'item_no': '10', 'description': '340-00333', 'hscode': 'MamaNatalie Comp! Light', 'p_o': '902300', 's_o': 'TN200259'}, {'unknown': '', 'no': '10', 'item_no': '450.00', 'description': '4500.00', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '340-11033', 'no': '', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '765.00', 'no': '902300', 'item_no': 'TN200259', 'description': '$0125175', 'hscode': '', 'p_o': '', 's_o': ''}, {'unknown': '', 'no': '', 'item_no': '340-11133', 'description': 'NeoNatalie Spare Lt', 'hscode': '902300', 'p_o': 'TN200259', 's_o': '$0125175'}, {'unknown': '902300', 'no': '', 'item_no': '153.00', 'description': '', 'hscode': '', 'p_o': '340-12033', 's_o': 'NeoNatalie body (Qt2) Dk'}, {'unknown': '38', 'no': '$0125175', 'item_no': '', 'description': '', 'hscode': '', 'p_o': '36.60', 's_o': ''}, {'unknown': '586.00', 'no': 'MamaBirthie (light)', 'item_no': '902300', 'description': 'TN200259', 'hscode': '$0125175', 'p_o': '', 's_o': '38'}, {'unknown': '$0125175', 'no': '', 'item_no': '', 'description': '450-00033', 'hscode': 'LM Mama-U', 'p_o': '902300', 's_o': 'TN200259'}, {'unknown': '', 'no': '', 'item_no': '153.00', 'description': '5508.00'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of dictionaries\n",
+    "json_data = []\n",
+    "for row in rows:\n",
+    "    row_dict = {}\n",
+    "    for header, cell in zip(headers, [cell[\"text\"] for cell in row]):\n",
+    "        row_dict[header] = cell\n",
+    "    json_data.append(row_dict)\n",
+    "\n",
+    "print(\"JSON Data:\", json_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSON file saved as 'output.json'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save to JSON file\n",
+    "with open(\"output.json\", \"w\") as f:\n",
+    "    json.dump(json_data, f, indent=4)\n",
+    "\n",
+    "print(\"JSON file saved as 'output.json'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission zip file created as 'submission.zip'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "\n",
+    "# Create a zip file\n",
+    "with zipfile.ZipFile(\"submission.zip\", \"w\", zipfile.ZIP_DEFLATED) as zipf:\n",
+    "    zipf.write(\"output.json\")\n",
+    "    zipf.write(\"image.png\")\n",
+    "\n",
+    "print(\"Submission zip file created as 'submission.zip'\")"
    ]
   },
   {
