--- a/CV.ipynb
+++ b/CV.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -76,29 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NO Item No Description Hscode P/O# S/O# Q'ty(Pcs) Unit Price(USD) Amount(USD)\n",
-      "2\n",
-      "\n",
-      "104-10001 NeoNatalie Basic (dark) 902300 TN200259 | SO125175 20 124.00 2480.00\n",
-      "io 340-00333 MamaNatalie Compl Light 902300 TN200259 | SO0125175 10 450.00 4500.00\n",
-      "1 340-00533 MamaN Compl (LT) Mama-U 902300 TN200259 | SO125175 a 705.60 705.60\n",
-      "1 340-11033 NeoNatalie Spare Dk 902300 TN200259 | SO0125175 a5 51.00 765.00\n",
-      "1 340-11133 NeoNatalie Spare Lt 902300 TN200259 | SO125175 3 51.00 153.00\n",
-      "1 340-12033 NeoNatalie body (Qt2) Dk 902300 TN200259 | SO0125175 1 36.60 36.60\n",
-      "38 360-00133 MamaBirthie (light) 902300 TN200259 | SO125175 38 586.00 22268.00\n",
-      "8 450-00033 LM Mama-U 902300 TN200259 | SO0125175 36 153.00 5508.00\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import pytesseract\n",
@@ -126,7 +106,7 @@
     "\n",
     "text = pytesseract.image_to_string(pil_image)\n",
     "\n",
-    "print(text)\n"
+    "# print(text)\n"
    ]
   },
   {
@@ -169,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +158,7 @@
        "True"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +176,7 @@
     "                               cv2.THRESH_BINARY_INV, 15, 2)\n",
     "\n",
     "horizontal_kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (30, 1))  # (Width, Height)\n",
-    "thresh_image = cv2.morphologyEx(thresh_image, cv2.MORPH_OPEN, horizontal_kernel, iterations=2)\n",
+    "thresh_image = cv2.morphologyEx(thresh_image, cv2.MORPH_OPEN, horizontal_kernel, iterations=5)\n",
     "\n",
     "# just for checking image \n",
     "cv2.imwrite(\"lines_detection.png\", thresh)"
@@ -211,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +200,7 @@
        "True"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -367,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[np.int32(2), np.int32(0), np.int32(1980), np.int32(0)]\n"
+      "[np.int32(1), np.int32(0), np.int32(1980), np.int32(0)]\n"
      ]
     }
    ],
@@ -385,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +374,7 @@
        "True"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,9 +417,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cell 1 Text: ''\n",
+      "Cell 2 Text: 'NO.'\n",
+      "Cell 3 Text: 'Item No'\n",
+      "Cell 4 Text: 'Description'\n",
+      "Cell 5 Text: 'Hscode'\n",
+      "Cell 6 Text: 'P/O#'\n",
+      "Cell 7 Text: 'S/O#'\n",
+      "Cell 8 Text: ''\n",
+      "Cell 9 Text: 'O'ty(Pcs)'\n",
+      "Cell 10 Text: 'Unit Price(USD)'\n",
+      "Cell 11 Text: 'Amount(USD)'\n",
+      "Cell 12 Text: ''\n",
+      "Cell 13 Text: ''\n",
+      "Cell 14 Text: ''\n",
+      "Cell 15 Text: ''\n",
+      "Cell 16 Text: ''\n",
+      "Cell 17 Text: ''\n",
+      "Cell 18 Text: ''\n",
+      "Cell 19 Text: ''\n",
+      "Cell 20 Text: ''\n",
+      "Cell 21 Text: ''\n",
+      "Cell 22 Text: ''\n",
+      "Cell 23 Text: ''\n",
+      "Cell 24 Text: ''\n",
+      "Cell 25 Text: '104-10001'\n",
+      "Cell 26 Text: 'NeoNatalie Basic (dark)'\n",
+      "Cell 27 Text: '902300'\n",
+      "Cell 28 Text: 'TN200259'\n",
+      "Cell 29 Text: '$0125175'\n",
+      "Cell 30 Text: ''\n",
+      "Cell 31 Text: '20'\n",
+      "Cell 32 Text: '124.00'\n",
+      "Cell 33 Text: '2480.00'\n",
+      "Cell 34 Text: ''\n",
+      "Cell 35 Text: '10'\n",
+      "Cell 36 Text: '340-00333'\n",
+      "Cell 37 Text: 'MamaNatalie Comp! Light'\n",
+      "Cell 38 Text: '902300'\n",
+      "Cell 39 Text: 'TN200259'\n",
+      "Cell 40 Text: '$0125175'\n",
+      "Cell 41 Text: ''\n",
+      "Cell 42 Text: '10'\n",
+      "Cell 43 Text: '450.00'\n",
+      "Cell 44 Text: '4500.00'\n",
+      "Cell 45 Text: ''\n",
+      "Cell 46 Text: ''\n",
+      "Cell 47 Text: ''\n",
+      "Cell 48 Text: ''\n",
+      "Cell 49 Text: ''\n",
+      "Cell 50 Text: ''\n",
+      "Cell 51 Text: ''\n",
+      "Cell 52 Text: ''\n",
+      "Cell 53 Text: ''\n",
+      "Cell 54 Text: ''\n",
+      "Cell 55 Text: ''\n",
+      "Cell 56 Text: ''\n",
+      "Cell 57 Text: ''\n",
+      "Cell 58 Text: ''\n",
+      "Cell 59 Text: ''\n",
+      "Cell 60 Text: ''\n",
+      "Cell 61 Text: ''\n",
+      "Cell 62 Text: ''\n",
+      "Cell 63 Text: ''\n",
+      "Cell 64 Text: ''\n",
+      "Cell 65 Text: ''\n",
+      "Cell 66 Text: ''\n",
+      "Cell 67 Text: ''\n",
+      "Cell 68 Text: ''\n",
+      "Cell 69 Text: ''\n",
+      "Cell 70 Text: ''\n",
+      "Cell 71 Text: ''\n",
+      "Cell 72 Text: ''\n",
+      "Cell 73 Text: ''\n",
+      "Cell 74 Text: ''\n",
+      "Cell 75 Text: ''\n",
+      "Cell 76 Text: ''\n",
+      "Cell 77 Text: ''\n",
+      "Cell 78 Text: ''\n",
+      "Cell 79 Text: ''\n",
+      "Cell 80 Text: ''\n",
+      "Cell 81 Text: ''\n",
+      "Cell 82 Text: ''\n",
+      "Cell 83 Text: ''\n",
+      "Cell 84 Text: ''\n",
+      "Cell 85 Text: ''\n",
+      "Cell 86 Text: ''\n",
+      "Cell 87 Text: ''\n",
+      "Cell 88 Text: ''\n",
+      "Cell 89 Text: ''\n",
+      "Cell 90 Text: ''\n",
+      "Cell 91 Text: ''\n",
+      "Cell 92 Text: ''\n",
+      "Cell 93 Text: ''\n",
+      "Cell 94 Text: ''\n",
+      "Cell 95 Text: ''\n",
+      "Cell 96 Text: ''\n",
+      "Cell 97 Text: ''\n",
+      "Cell 98 Text: ''\n",
+      "Cell 99 Text: ''\n",
+      "Cell 100 Text: ''\n",
+      "Cell 101 Text: ''\n",
+      "Cell 102 Text: ''\n",
+      "Cell 103 Text: ''\n",
+      "Cell 104 Text: ''\n",
+      "Cell 105 Text: ''\n",
+      "Cell 106 Text: ''\n",
+      "Cell 107 Text: ''\n",
+      "Cell 108 Text: ''\n",
+      "Cell 109 Text: ''\n",
+      "Cell 110 Text: ''\n",
+      "Cell 111 Text: ''\n",
+      "Cell 112 Text: ''\n",
+      "Cell 113 Text: ''\n",
+      "Cell 114 Text: ''\n",
+      "Cell 115 Text: ''\n",
+      "Cell 116 Text: ''\n",
+      "Cell 117 Text: ''\n",
+      "Cell 118 Text: ''\n",
+      "Cell 119 Text: ''\n",
+      "Cell 120 Text: ''\n",
+      "Cell 121 Text: ''\n",
+      "Cell 122 Text: ''\n",
+      "Cell 123 Text: ''\n",
+      "Cell 124 Text: ''\n",
+      "Cell 125 Text: ''\n",
+      "Cell 126 Text: ''\n",
+      "Cell 127 Text: ''\n",
+      "Cell 128 Text: ''\n",
+      "Cell 129 Text: ''\n",
+      "Cell 130 Text: ''\n",
+      "Cell 131 Text: ''\n",
+      "Cell 132 Text: ''\n",
+      "Cell 133 Text: ''\n",
+      "Cell 134 Text: ''\n",
+      "Cell 135 Text: ''\n",
+      "Cell 136 Text: ''\n",
+      "Cell 137 Text: ''\n",
+      "Cell 138 Text: ''\n",
+      "Cell 139 Text: ''\n",
+      "Cell 140 Text: ''\n",
+      "Cell 141 Text: ''\n",
+      "Cell 142 Text: ''\n",
+      "Cell 143 Text: ''\n",
+      "Cell 144 Text: ''\n",
+      "Cell 145 Text: ''\n",
+      "Cell 146 Text: ''\n",
+      "Cell 147 Text: ''\n",
+      "Cell 148 Text: ''\n",
+      "Cell 149 Text: ''\n",
+      "Cell 150 Text: ''\n",
+      "Cell 151 Text: ''\n",
+      "Cell 152 Text: ''\n",
+      "Cell 153 Text: ''\n",
+      "Cell 154 Text: ''\n",
+      "Cell 155 Text: ''\n",
+      "Cell 156 Text: ''\n",
+      "Cell 157 Text: ''\n",
+      "Cell 158 Text: ''\n",
+      "Cell 159 Text: ''\n",
+      "Cell 160 Text: ''\n",
+      "Cell 161 Text: ''\n",
+      "Cell 162 Text: ''\n",
+      "Cell 163 Text: ''\n",
+      "Cell 164 Text: ''\n",
+      "Cell 165 Text: ''\n",
+      "Cell 166 Text: ''\n",
+      "Cell 167 Text: ''\n",
+      "Cell 168 Text: '340-11033'\n",
+      "Cell 169 Text: 'NeoNatalie Spare Dk'\n",
+      "Cell 170 Text: '902300'\n",
+      "Cell 171 Text: 'TN200259'\n",
+      "Cell 172 Text: '$0125175'\n",
+      "Cell 173 Text: ''\n",
+      "Cell 174 Text: ''\n",
+      "Cell 175 Text: ''\n",
+      "Cell 176 Text: '765.00'\n",
+      "Cell 177 Text: ''\n",
+      "Cell 178 Text: ''\n",
+      "Cell 179 Text: '340-11133'\n",
+      "Cell 180 Text: 'NeoNatalie Spare Lt'\n",
+      "Cell 181 Text: '902300'\n",
+      "Cell 182 Text: 'TN200259'\n",
+      "Cell 183 Text: '$0125175'\n",
+      "Cell 184 Text: ''\n",
+      "Cell 185 Text: ''\n",
+      "Cell 186 Text: ''\n",
+      "Cell 187 Text: '153.00'\n",
+      "Cell 188 Text: ''\n",
+      "Cell 189 Text: ''\n",
+      "Cell 190 Text: '340-12033'\n",
+      "Cell 191 Text: 'NeoNatalie body (Qt2) Dk'\n",
+      "Cell 192 Text: '902300'\n",
+      "Cell 193 Text: 'TN200259'\n",
+      "Cell 194 Text: '$0125175'\n",
+      "Cell 195 Text: ''\n",
+      "Cell 196 Text: ''\n",
+      "Cell 197 Text: ''\n",
+      "Cell 198 Text: '36.60'\n",
+      "Cell 199 Text: ''\n",
+      "Cell 200 Text: '38'\n",
+      "Cell 201 Text: '360-00133'\n",
+      "Cell 202 Text: 'MamaBirthie (light)'\n",
+      "Cell 203 Text: '902300'\n",
+      "Cell 204 Text: 'TN200259'\n",
+      "Cell 205 Text: '$0125175'\n",
+      "Cell 206 Text: ''\n",
+      "Cell 207 Text: '38'\n",
+      "Cell 208 Text: '586.00'\n",
+      "Cell 209 Text: '22268.00'\n",
+      "Cell 210 Text: ''\n",
+      "Cell 211 Text: ''\n",
+      "Cell 212 Text: '450-00033'\n",
+      "Cell 213 Text: 'LM Mama-U'\n",
+      "Cell 214 Text: '902300'\n",
+      "Cell 215 Text: 'TN200259'\n",
+      "Cell 216 Text: '$0125175'\n",
+      "Cell 217 Text: ''\n",
+      "Cell 218 Text: ''\n",
+      "Cell 219 Text: '153.00'\n",
+      "Cell 220 Text: '5508.00'\n"
+     ]
+    }
+   ],
    "source": [
     "cell_text = []\n",
     "for idx, (x1, y1, x2, y2) in enumerate(cells):\n",
@@ -455,7 +662,7 @@
     "    \n",
     "    # Store the text and coordinates\n",
     "    cell_text.append({\"text\": text, \"coords\": (x1, y1, x2, y2)})\n",
-    "    # print(f\"Cell {idx + 1} Text: '{text}'\")"
+    "    print(f\"Cell {idx + 1} Text: '{text}'\")"
    ]
   },
   {
@@ -467,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
